Fix scroll issue on ios

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,7 @@
 
 body.noScroll { /* ...or body.dialogShowing */
   overflow: hidden;
+  position: fixed;
 }
 
 body, html {
